--- a/sea-level/Cargo.toml
+++ b/sea-level/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4"
 dbus = "0.9"
 dbus-tokio = "0.7"
 futures-util = "0.3"
