--- a/sea-level/Cargo.toml
+++ b/sea-level/Cargo.toml
@@ -7,8 +7,6 @@ edition = "2018"
 
 [dependencies]
 chrono = "0.4"
-dbus = "0.9"
-dbus-tokio = "0.7"
 futures-util = "0.3"
 quinn = "0.7"
 rand = "0.8"
@@ -16,3 +14,9 @@ rcgen = { version = "0.8.6", features = ["pem", "x509-parser"] }
 rustls = "0.19"
 tokio = { version = "1.0", features = ["full"] }
 webpki = "0.21"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+dbus = "0.9"
+dbus-tokio = "0.7"
+
+[target.'cfg(windows)'.dependencies]
