begin work on windows impl

--- a/correspondent/Cargo.toml
+++ b/correspondent/Cargo.toml
@@ -26,3 +26,6 @@ dbus = "0.9"
 dbus-tokio = "0.7"
 
 [target.'cfg(windows)'.dependencies]
+windows = "0.18.0"
+[target.'cfg(windows)'.build-dependencies]
+windows = "0.18.0"
