--- a/correspondent/Cargo.toml
+++ b/correspondent/Cargo.toml
@@ -20,6 +20,7 @@ rcgen = { version = "0.8.6", features = ["pem", "x509-parser"] }
 rustls = "0.19"
 tokio = { version = "1.0", features = ["full"] }
 webpki = "0.21"
+x509-parser = "0.9"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 dbus = "0.9"
