--- a/correspondent-ffi/Cargo.toml
+++ b/correspondent-ffi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "correspondent-ffi"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2018"
 publish = false
 license = "Apache-2.0 OR MIT OR Zlib"
@@ -11,5 +11,6 @@ crate-type = ["cdylib"]
 
 [dependencies]
 correspondent = { path = "../correspondent" }
+futures-util = "0.3"
 rcgen = { version = "0.8.6", features = ["pem", "x509-parser"] }
 tokio = { version = "1.0", features = ["full"] }
