--- a/correspondent-ffi/Cargo.toml
+++ b/correspondent-ffi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "correspondent-ffi"
-version = "0.2.0"
+version = "0.3.0-dev0"
 edition = "2018"
 publish = false
 license = "Apache-2.0 OR MIT OR Zlib"
