--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Apt Dependencies
+      run: sudo apt-get -y install libdbus-1-dev
     - uses: actions/checkout@v2
     - uses: actions/cache@v2
       with:
