--- a/correspondent-ffi/Cargo.toml
+++ b/correspondent-ffi/Cargo.toml
@@ -12,6 +12,6 @@ crate-type = ["cdylib"]
 [dependencies]
 correspondent = { path = "../correspondent" }
 futures-util = "0.3"
-quinn = { git = "https://github.com/quinn-rs/quinn", branch = "main" }
+quinn = "0.8.4"
 rcgen = { version = "0.8.6", features = ["pem", "x509-parser"] }
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.20.1", features = ["full"] }
