--- a/correspondent/Cargo.toml
+++ b/correspondent/Cargo.toml
@@ -30,5 +30,7 @@ dbus = "0.9"
 dbus-tokio = "0.7"
 
 [target.'cfg(windows)'.dependencies]
-windows = "0.18.0"
-gethostname = "0.2.1"
+windows = { version = "0.56.0", features = [
+    "Win32_NetworkManagement_Dns",
+]}
+gethostname = "0.4.3"
