--- a/correspondent/Cargo.toml
+++ b/correspondent/Cargo.toml
@@ -14,10 +14,10 @@ license = "Apache-2.0 OR MIT OR Zlib"
 [dependencies]
 futures-util = { version = "0.3.30", features = ["channel"] }
 pem = "3.0.3"
-quinn = { version = "0.10.2", default-features = false, features = ["tls-rustls", "runtime-tokio"] }
+quinn = { version = "0.11.1", default-features = false, features = ["rustls", "runtime-tokio"] }
 rand = "0.8.5"
 rcgen = { version = "0.13.0", features = ["pem", "x509-parser"] }
-rustls = "0.21.10"
+rustls = "0.23.8"
 rustls-pemfile = "2.1.1"
 socket2 = "0.5.6"
 time = "0.3.14"
